tests/examples/bad/wrong_spacing.php
<?php
/**
 *
 * @file
 * @version 1.0
 * @copyright 2020 CN-Consult GmbH
 * @author Daniel Haas <daniel.haas@cn-consult.eu>
 */

$a=array();

foreach( $a as $a ){echo $a;}

$i = (int) $a;

if (! $i) echo "something";

echo"without space is bad";

if(true) echo "if without space is bad";

echo "no space before semicolon" ;

for($i=0;$i<10;$i++) echo "give me more space!";